--- a/lib/Makefile.DC_KOS
+++ b/lib/Makefile.DC_KOS
@@ -1,6 +1,4 @@
-KOS_CFLAGS = -DDC_KOS_PLATFORM -DNEED_WRITEV -DNEED_READV -DHAVE_STDINT_H -DHAVE_STRING_H \
-	  -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_SYS_STAT_H -DHAVE_TIME_H -DHAVE_NETINET_IN_H \
-	  -DHAVE_SYS_SOCKET_H -D HAVE_NETDB_H -DHAVE_POLL_H -DHAVE_STDLIB_H \
+KOS_CFLAGS = -DDC_KOS_PLATFORM -DNEED_WRITEV -DNEED_READV -DHAVE_CONFIG_H \
 	  -D_U_=/**/ -I../include -I../include/smb2 $(KOS_INC_PATHS)
 
 TARGET = libsmb2.a
