--- a/lib/Makefile.PS3_PPU
+++ b/lib/Makefile.PS3_PPU
@@ -33,12 +33,11 @@ endif
 TARGET		:=	libsmb2
 BUILD		:=	build
 SOURCE		:=	../lib
-INCLUDE		:=	../include ../include/smb2
+INCLUDE		:=	../include ../include/ps3 ../include/smb2
 DATA		:=	data
 LIBS		:=	
 
-MACHDEP		:= -DPS3_PPU_PLATFORM -DHAVE_STDINT_H -DHAVE_STRING_H \
-				-DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_TIME_H -DHAVE_FCNTL -D_U_=/**/
+MACHDEP		:= -DPS3_PPU_PLATFORM -DHAVE_CONFIG_H -D_U_=/**/
 
 CFLAGS		+= -O2 -Wall -mcpu=cell $(MACHDEP) -fno-strict-aliasing $(INCLUDES)
 
