--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -38,7 +38,7 @@ jobs:
         cmake --build .
 
   build-ps2-ee:
-    name: PS2 EE build
+    name: PS2 build
 
     runs-on: ubuntu-latest
     container: ps2dev/ps2dev:latest
@@ -50,11 +50,17 @@ jobs:
     - name: git checkout
       uses: actions/checkout@v3
 
-    - name: make -f Makefile.PS2_EE
+    - name: Compile PS2 EE Side
       run: |
         cd lib
         make -f Makefile.PS2_EE clean
         make -f Makefile.PS2_EE
+
+    - name: Compile PS2 IOP Side
+      run: |
+        cd lib
+        make -f Makefile.PS2_IOP clean
+        make -f Makefile.PS2_IOP
 
   build-ps3-ppu:
     name: PS3 PPU build
