--- a/lib/Makefile.PS2_EE_IPS
+++ b/lib/Makefile.PS2_EE_IPS
@@ -1,4 +1,4 @@
-EE_CFLAGS = -DPS2_EE_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV \
+EE_CFLAGS = -DPS2_EE_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DHAVE_GETLOGIN_R \
 	  -D_U_=/**/ -DPS2IPS -I../include -I../include/ps2 -I../include/smb2
 
 EE_LIB = libsmb2_ips.a
