Add NEED_SRANDOM and NEED_RANDOM to amiga

--- a/lib/Makefile.AMIGA
+++ b/lib/Makefile.AMIGA
@@ -7,7 +7,7 @@ OPTIMIZE = -O2
 DEBUG    = -gstabs
 WARNINGS = -Wall -Werror -Wwrite-strings
 INCLUDES = -I. -I../include -I../include/smb2 -I../include/amiga_os
-DEFINES  = -DHAVE_CONFIG_H "-D_U_=__attribute__((unused))" -DNEED_POLL -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_GETLOGIN_R
+DEFINES  = -DHAVE_CONFIG_H "-D_U_=__attribute__((unused))" -DNEED_POLL -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_GETLOGIN_R -DNEED_RANDOM -DNEED_SRANDOM
 
 CFLAGS  = $(OPTIMIZE) $(DEBUG) $(WARNINGS) $(INCLUDES) $(DEFINES)
 
