Fix copying smb2_export.h for release;

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -6,6 +6,7 @@ dist_smb2_HEADERS = \
 	smb2/libsmb2-dcerpc-srvsvc.h \
 	smb2/libsmb2-raw.h \
 	smb2/smb2.h \
+	smb2/smb2-exports.h \
 	smb2/smb2-errors.h
 
 dist_noinst_HEADERS = \
