Cleanup compat.c for ESP and PICO platforms plus cmake Bump minor version of cmake for 3.5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,4 @@
-if(NOT ESP_PLATFORM)
-
-  if(PICO_BOARD)
-
+if(PICO_BOARD)
     cmake_minimum_required(VERSION 3.12)
 
     message(STATUS "Configuring libsmb2 for ${PICO_BOARD}")
@@ -68,10 +65,79 @@ if(NOT ESP_PLATFORM)
             include/picow
     )
 
-    ##### EMD PICO_BOARD
+	add_definitions(-DNEED_BE64TOH -DNEED_POLL -DNEED_GETLOGIN_R)
 
-  else() ##### DEFAULT
-    cmake_minimum_required(VERSION 3.2)
+ ##### END PICO_BOARD
+elseif(ESP_PLATFORM)
+  if(NOT CMAKE_BUILD_EARLY_EXPANSION)
+    add_definitions(-DHAVE_CONFIG_H)
+  endif()
+  
+  add_definitions(-DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_RANDOM -DNEED_SRANDOM)
+
+  set(COMPONENT_ADD_INCLUDEDIRS
+    "lib"
+    include
+    include/smb2
+    include/esp
+  )
+
+  set(COMPONENT_SRCS
+    lib/aes.c
+    lib/aes128ccm.c
+    lib/alloc.c
+	lib/compat.c
+    lib/dcerpc.c
+    lib/dcerpc-lsa.c
+    lib/dcerpc-srvsvc.c
+    lib/errors.c
+    lib/init.c
+    lib/hmac.c
+    lib/hmac-md5.c
+    lib/krb5-wrapper.c
+    lib/libsmb2.c
+    lib/md4c.c
+    lib/md5.c
+    lib/ntlmssp.c
+    lib/pdu.c
+    lib/sha1.c
+    lib/sha224-256.c
+    lib/sha384-512.c
+    lib/smb2-cmd-close.c
+    lib/smb2-cmd-create.c
+    lib/smb2-cmd-echo.c
+    lib/smb2-cmd-error.c
+    lib/smb2-cmd-flush.c
+    lib/smb2-cmd-ioctl.c
+    lib/smb2-cmd-logoff.c
+    lib/smb2-cmd-negotiate.c
+    lib/smb2-cmd-query-directory.c
+    lib/smb2-cmd-query-info.c
+    lib/smb2-cmd-read.c
+    lib/smb2-cmd-session-setup.c
+    lib/smb2-cmd-set-info.c
+    lib/smb2-cmd-tree-connect.c
+    lib/smb2-cmd-tree-disconnect.c
+    lib/smb2-cmd-write.c
+    lib/smb2-data-file-info.c
+    lib/smb2-data-filesystem-info.c
+    lib/smb2-data-security-descriptor.c
+    lib/smb2-data-reparse-point.c
+    lib/smb2-share-enum.c
+    lib/smb3-seal.c
+    lib/smb2-signing.c
+    lib/socket.c
+    lib/sync.c
+    lib/timestamps.c
+    lib/unicode.c
+    lib/usha.c
+  )
+
+  set(COMPONENT_NAME ".")
+
+  register_component()  
+else() 
+    cmake_minimum_required(VERSION 3.5)
 
     project(libsmb2
             LANGUAGES C
@@ -152,74 +218,5 @@ if(NOT ESP_PLATFORM)
 
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libsmb2.pc
             DESTINATION ${INSTALL_PKGCONFIG_DIR})
-  endif() ### DEFAULT
+endif() 
 
-else() ##### ESP_PLATFORM
-
-  if(NOT CMAKE_BUILD_EARLY_EXPANSION)
-    add_definitions(-DHAVE_CONFIG_H)
-  endif()
-
-  set(COMPONENT_ADD_INCLUDEDIRS
-    "lib"
-    include
-    include/smb2
-    include/esp
-  )
-
-  set(COMPONENT_SRCS
-    lib/aes.c
-    lib/aes128ccm.c
-    lib/alloc.c
-	lib/compat.c
-    lib/dcerpc.c
-    lib/dcerpc-lsa.c
-    lib/dcerpc-srvsvc.c
-    lib/errors.c
-    lib/init.c
-    lib/hmac.c
-    lib/hmac-md5.c
-    lib/krb5-wrapper.c
-    lib/libsmb2.c
-    lib/md4c.c
-    lib/md5.c
-    lib/ntlmssp.c
-    lib/pdu.c
-    lib/sha1.c
-    lib/sha224-256.c
-    lib/sha384-512.c
-    lib/smb2-cmd-close.c
-    lib/smb2-cmd-create.c
-    lib/smb2-cmd-echo.c
-    lib/smb2-cmd-error.c
-    lib/smb2-cmd-flush.c
-    lib/smb2-cmd-ioctl.c
-    lib/smb2-cmd-logoff.c
-    lib/smb2-cmd-negotiate.c
-    lib/smb2-cmd-query-directory.c
-    lib/smb2-cmd-query-info.c
-    lib/smb2-cmd-read.c
-    lib/smb2-cmd-session-setup.c
-    lib/smb2-cmd-set-info.c
-    lib/smb2-cmd-tree-connect.c
-    lib/smb2-cmd-tree-disconnect.c
-    lib/smb2-cmd-write.c
-    lib/smb2-data-file-info.c
-    lib/smb2-data-filesystem-info.c
-    lib/smb2-data-security-descriptor.c
-    lib/smb2-data-reparse-point.c
-    lib/smb2-share-enum.c
-    lib/smb3-seal.c
-    lib/smb2-signing.c
-    lib/socket.c
-    lib/sync.c
-    lib/timestamps.c
-    lib/unicode.c
-    lib/usha.c
-  )
-
-  set(COMPONENT_NAME ".")
-
-  register_component()
-
-endif() ##### ESP_PLATFORM
