--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -68,6 +68,44 @@ jobs:
         make -f Makefile.PS2_IOP clean
         make -f Makefile.PS2_IOP
 
+  build-switch:
+    name: SWITCH build
+
+    runs-on: ubuntu-latest
+    container: devkitpro/devkita64:latest
+    steps:
+    - name: Install dependencies
+      run: |
+        apt-get update -y && apt-get install -y gettext smpq
+
+    - name: git checkout
+      uses: actions/checkout@v3
+
+    - name: Compile Nintendo Switch
+      run: |
+        cd lib
+        make -f Makefile.SWITCH clean
+        make -f Makefile.SWITCH
+
+  build-3ds:
+    name: 3DS build
+
+    runs-on: ubuntu-latest
+    container: devkitpro/devkitarm:latest
+    steps:
+    - name: Install dependencies
+      run: |
+        apt-get update -y && apt-get install -y ffmpeg gettext smpq
+
+    - name: git checkout
+      uses: actions/checkout@v3
+
+    - name: Compile Nintendo 3DS
+      run: |
+        cd lib
+        make -f Makefile.3DS clean
+        make -f Makefile.3DS
+
   build-ps3-ppu:
     name: PS3 PPU build
 
