--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -106,6 +106,44 @@ jobs:
         make -f Makefile.3DS clean
         make -f Makefile.3DS
 
+  build-wii:
+    name: WII build
+
+    runs-on: ubuntu-latest
+    container: devkitpro/devkitppc:latest
+    steps:
+    - name: Install dependencies
+      run: |
+        apt-get update -y && apt-get install -y ffmpeg gettext smpq
+
+    - name: git checkout
+      uses: actions/checkout@v3
+
+    - name: Compile Nintendo WII
+      run: |
+        cd lib
+        make -f Makefile.WII clean
+        make -f Makefile.WII
+
+  build-gc:
+    name: GameCube build
+
+    runs-on: ubuntu-latest
+    container: devkitpro/devkitppc:latest
+    steps:
+    - name: Install dependencies
+      run: |
+        apt-get update -y && apt-get install -y ffmpeg gettext smpq
+
+    - name: git checkout
+      uses: actions/checkout@v3
+
+    - name: Compile Nintendo Gamecube
+      run: |
+        cd lib
+        make -f Makefile.GC clean
+        make -f Makefile.GC
+
   build-ps3-ppu:
     name: PS3 PPU build
 
