--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -138,11 +138,30 @@ jobs:
     - name: git checkout
       uses: actions/checkout@v3
 
-    - name: Compile Nintendo Gamecube
+    - name: Compile Nintendo WII-U
       run: |
         cd lib
         make -f Makefile.GC clean
         make -f Makefile.GC
+
+  build-wiiu:
+    name: WII-U Build
+
+    runs-on: ubuntu-latest
+    container: devkitpro/devkitppc:latest
+    steps:
+    - name: Install dependencies
+      run: |
+        apt-get update -y && apt-get install -y ffmpeg gettext smpq
+
+    - name: git checkout
+      uses: actions/checkout@v3
+
+    - name: Compile Nintendo Gamecube
+      run: |
+        cd lib
+        make -f Makefile.WIIU clean
+        make -f Makefile.WIIU
 
   build-ps3-ppu:
     name: PS3 PPU build
