--- a/lib/Makefile.PS2_IOP
+++ b/lib/Makefile.PS2_IOP
@@ -1,5 +1,4 @@
-IOP_CFLAGS = -DPS2_IOP_PLATFORM -DPS2_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_STRDUP -DNEED_READV -DNEED_WRITEV -DNEED_POLL -DNEED_GETPID -DNEED_RANDOM -DNEED_SRANDOM -DNEED_GETLOGIN_R
-	  -D_U_=/**/
+IOP_CFLAGS = -DPS2_IOP_PLATFORM -DPS2_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_STRDUP -DNEED_READV -DNEED_WRITEV -DNEED_POLL -DNEED_GETPID -DNEED_RANDOM -DNEED_SRANDOM -DNEED_GETLOGIN_R -D_U_=/**/
 IOP_CFLAGS += -Wall -Os -I. -I../include -I../include/ps2 -I../include/smb2
 
 IOP_LIB = libsmb2.a
