--- a/Xbox/libsmb2.vcproj
+++ b/Xbox/libsmb2.vcproj
@@ -21,7 +21,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="2"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="..\include\;..\include\msvc;..\include\xbox;..\include\smb2"
+				AdditionalIncludeDirectories="..\include\;..\include\xbox;..\include\smb2"
 				PreprocessorDefinitions="_DEBUG;_XBOX;_LIB;XBOX_PLATFORM;NEED_POLL;NEED_GETADDRINFO;NEED_FREEADDRINFO;NEED_GETPID;NEED_GETLOGIN_R;NEED_RANDOM;NEED_SRANDOM;HAVE_CONFIG_H"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -127,7 +127,7 @@
 				InlineFunctionExpansion="2"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="..\include\;..\include\msvc;..\include\xbox;..\include\smb2"
+				AdditionalIncludeDirectories="..\include\;..\include\xbox;..\include\smb2"
 				PreprocessorDefinitions="NDEBUG;_XBOX;_LIB;XBOX_PLATFORM;NEED_POLL;NEED_GETADDRINFO;NEED_FREEADDRINFO;NEED_GETPID;NEED_GETLOGIN_R;NEED_RANDOM;NEED_SRANDOM;HAVE_CONFIG_H"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -165,7 +165,7 @@
 				Optimization="3"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="..\include\;..\include\msvc;..\include\xbox;..\include\smb2"
+				AdditionalIncludeDirectories="..\include\;..\include\xbox;..\include\smb2"
 				PreprocessorDefinitions="NDEBUG;_XBOX;LTCG;_LIB;XBOX_PLATFORM;NEED_POLL;NEED_GETADDRINFO;NEED_FREEADDRINFO;NEED_GETPID;NEED_GETLOGIN_R;NEED_RANDOM;NEED_SRANDOM;HAVE_CONFIG_H"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -210,20 +210,6 @@
 			<File
 				RelativePath="..\include\slist.h">
 			</File>
-			<Filter
-				Name="msvc"
-				Filter="">
-				<File
-					RelativePath="..\include\msvc\poll.h">
-				</File>
-				<Filter
-					Name="sys"
-					Filter="">
-					<File
-						RelativePath="..\include\msvc\sys\socket.h">
-					</File>
-				</Filter>
-			</Filter>
 			<Filter
 				Name="xbox"
 				Filter="">
