--- a/lib/Makefile.GC
+++ b/lib/Makefile.GC
@@ -64,7 +64,7 @@ OBJS := aes128ccm.o \
 # Compilation flags.
 COMMON_FLAGS	:= -g -O3 -Wall $(MACHDEP) 
 INCLUDES		:= -I../include -I../include/gamecube -I../include/smb2 -I$(LIBOGC_INC)
-DEFINES			:= -DGEKKO -DHAVE_CONFIG_H -D__GC__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL 
+DEFINES			:= -DGEKKO -DHAVE_CONFIG_H -D__GC__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL -D_U_=/**/
 CFLAGS			:= $(COMMON_FLAGS) $(INCLUDES) $(DEFINES)
 
 # Test link flags.
