--- a/lib/Makefile.GC
+++ b/lib/Makefile.GC
@@ -9,8 +9,7 @@ endif
 
 include $(DEVKITPPC)/gamecube_rules
 
-TARGET_LIB = libsmb2.a
-
+TARGET_LIB = libsmb2.a 
 # Library object files.
 OBJS := aes128ccm.o \
 	aes.o \
@@ -61,7 +60,9 @@ OBJS := aes128ccm.o \
 	socket.o \
 	sync.o
 
-# Compilation flags.
+#---------------------------------------------------------------------------------
+# options for code generation
+#---------------------------------------------------------------------------------
 COMMON_FLAGS	:= -g -O3 -Wall $(MACHDEP) 
 INCLUDES		:= -I../include -I../include/gamecube -I../include/smb2 -I$(LIBOGC_INC)
 DEFINES			:= -DGEKKO -DHAVE_CONFIG_H -D__GC__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL -D_U_=/**/
@@ -70,23 +71,17 @@ CFLAGS			:= $(COMMON_FLAGS) $(INCLUDES) $(DEFINES)
 # Test link flags.
 LDFLAGS			:= $(COMMON_FLAGS) -L$(LIBOGC_LIB) -lbte -logc -lm 
 
-# What's a full build?
 all: $(OBJS) $(TARGET_LIB)
 
-# How to delete the intermediate files.
-clean:
-	@echo Cleaning $(TARGET_LIB) $(OBJS)
-	@rm -fr $(TARGET_LIB) $(OBJS)
+$(TARGET_LIB): $(OBJS)
+	$(AR) -rc $@ $^
 
-install: all
+install: $(TARGET_LIB)
 	@cp  $(TARGET_LIB) "$(DEVKITPRO)/portlibs/gamecube/lib"
 	@mkdir -p "$(DEVKITPRO)/portlibs/gamecube/include/smb2"
 	@cp ../include/smb2/*.h "$(DEVKITPRO)/portlibs/gamecube/include/smb2"
 	@echo "Installed!"
 
-# Used to install library by pressing Alt+R in Programmer's Notepad
-#run: all install
-	
-# How to build a library.
-$(TARGET_LIB): $(OBJS)
-	$(AR) -rc $@ $^	
+clean:
+	@echo Cleaning $(TARGET_LIB) $(OBJS)
+	@rm -rf $(OBJS) $(TARGET_LIB)
