--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,11 @@ elseif(ESP_PLATFORM)
 
   register_component()  
 else() 
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
+    cmake_minimum_required(VERSION 3.13)
+  else()
     cmake_minimum_required(VERSION 3.5)
+  endif()
 
     project(libsmb2
             LANGUAGES C
@@ -150,10 +154,13 @@ else()
     set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
     set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
     set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
-
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
+    option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
+  else()
     option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+  endif()
     option(ENABLE_EXAMPLES "Build example programs" OFF)
-
+    
     list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 
     if(IOS)
@@ -188,6 +195,20 @@ else()
     if(CMAKE_SYSTEM_NAME MATCHES Windows)
       list(APPEND CORE_LIBRARIES ws2_32.lib)
       add_definitions(-DWIN32_LEAN_AND_MEAN -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS)
+    elseif(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch)
+      add_definitions(-DARM11 -DSWITCH -D__SWITCH__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
+      set(ARCH "-march=armv8-a -mtp=soft -fPIE")
+      set(CMAKE_C_FLAGS "-g -Wall -O2 -ffast-math ${ARCH}")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-variable -Iinclude -Iinclude/switch -Iinclude/smb2")
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -std=gnu++11")
+      set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=switch.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
+    elseif(CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
+      add_definitions(-DARM11 -D_3DS -D__3DS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
+      set(ARCH "-march=armv6k -mfloat-abi=hard -mtune=mpcore -mtp=soft -fPIE")
+      set(CMAKE_C_FLAGS "-Wno-unused-variable -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffast-math ${ARCH}")
+      set(CMAKE_C_FLAGS "${CMAKE_C_CFLAGS} -Iinclude -Iinclude/n3ds -Iinclude/smb2 -I${CTRULIB}/include")
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
+      set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")    
     elseif(CMAKE_SYSTEM_NAME STREQUAL Solaris)
       find_library(SOCKET_LIBRARY socket)
       find_library(NSL_LIBRARY nsl)
