--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,16 +199,19 @@ else()
       add_definitions(-DARM11 -DSWITCH -D__SWITCH__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv8-a -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-g -Wall -O2 -ffast-math ${ARCH}")
-      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-variable -Iinclude -Iinclude/switch -Iinclude/smb2")
+      include_directories(include include/switch include/smb2)
+      set(CMAKE_C_FLAGS "-Wno-unused-variable")
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -std=gnu++11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=switch.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
+      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")
     elseif(CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
       add_definitions(-DARM11 -D_3DS -D__3DS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv6k -mfloat-abi=hard -mtune=mpcore -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-Wno-unused-variable -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffast-math ${ARCH}")
-      set(CMAKE_C_FLAGS "${CMAKE_C_CFLAGS} -Iinclude -Iinclude/n3ds -Iinclude/smb2 -I${CTRULIB}/include")
+      include_directories(include include/n3ds include/smb2)
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
-      set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")    
+      set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
+      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")    
     elseif(CMAKE_SYSTEM_NAME STREQUAL Solaris)
       find_library(SOCKET_LIBRARY socket)
       find_library(NSL_LIBRARY nsl)
